--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
+<title>Thai Lao E-Biz Advisor | ปลดล็อกตลาดลาวฉบับคนวงใน</title>
+<meta name="title" content="Thai Lao E-Biz Advisor | ปลดล็อกตลาดลาวฉบับคนวงใน">
+<meta name="description" content="บริการที่ปรึกษาการตลาดลาว เจาะกลุ่มตลาดบน Luxury & Niche ด้วยประสบการณ์กว่า 10 ปีในเวียงจันทน์ ช่วยวางระบบขายของไปลาว ยิงแอด และโลจิสติกส์แบบครบวงจร">
+<meta name="keywords" content="การตลาดลาว, ขายของไปลาว, ที่ปรึกษาธุรกิจลาว, ส่งออกลาว, ยิงแอดลาว, ขนส่งไปลาว, ตลาดลาว 2026">
+<meta name="author" content="Pawach Kulteerajesada">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://thailaobiz.github.io/">
+<meta property="og:title" content="Thai Lao E-Biz Advisor | ปลดล็อกตลาดลาวฉบับคนวงใน">
+<meta property="og:description" content="เลิกตำน้ำพริกละลายแม่น้ำโขง เจาะกลุ่มลูกค้าที่มีเงินจริงในลาว ด้วยกลยุทธ์จากคนวงใน">
+<meta property="og:image" content="https://thailaobiz.github.io/images/logo.png"> <meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://thailaobiz.github.io/">
+<meta property="twitter:title" content="Thai Lao E-Biz Advisor | ปลดล็อกตลาดลาวฉบับคนวงใน">
+<meta property="twitter:description" content="เลิกตำน้ำพริกละลายแม่น้ำโขง เจาะกลุ่มลูกค้าที่มีเงินจริงในลาว ด้วยกลยุทธ์จากคนวงใน">
+<meta property="twitter:image" content="https://thailaobiz.github.io/images/logo.png">
+
+<link rel="icon" type="image/png" href="images/logo.png">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thai Lao E-Biz Advisor - ปลดล็อกตลาดลาวฉบับคนวงใน</title>
     <link rel="stylesheet" href="style.css">
