--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <section id="stats" class="section-padding bg-light">
         <div class="container">
             <h2 class="section-title text-center">
-                <span lang="th">ตัวเลขไม่เคยโกหก: ทำไมต้องเจาะตลาดบน?</span>
-                <span lang="en">Numbers Don't Lie: Why Target the Elite?</span>
+                <span lang="th">สถิติการตลาดลาว 2026: ทำไมต้องเจาะตลาดบน?</span>
+                <span lang="en">Lao Market Statistics 2026 : Why Target the Elite?</span>
             </h2>
             
             <div class="services-grid">
@@ -292,8 +292,8 @@
     <section id="services" class="section-padding">
         <div class="container">
             <h2 class="section-title text-center" style="margin-bottom: 50px;">
-                <span lang="th">บริการแบบเจาะลึก</span>
-                <span lang="en">In-Depth Services</span>
+                <span lang="th">บริการที่ปรึกษาการตลาดลาวแบบครบวงจร</span>
+                <span lang="en">Comprehensive Marketing Consulting Services in Laos</span>
             </h2>
 
             <div class="about-wrapper" style="margin-bottom: 60px;">
