--- a/index.html
+++ b/index.html
@@ -129,14 +129,15 @@
                 <i class="fas fa-bars"></i>
             </div>
 
-            <ul class="nav-links">
-                <li><a href="#stats"><span lang="th">ข้อมูลตลาด</span><span lang="en">Market Data</span></a></li>
-                <li><a href="#benefits"><span lang="th">สิ่งที่คุณจะได้</span><span lang="en">Benefits</span></a></li>
-                <li><a href="#services"><span lang="th">บริการ</span><span lang="en">Services</span></a></li>
-                <li><a href="#about"><span lang="th">ผู้เชี่ยวชาญ</span><span lang="en">Expert</span></a></li>
-                <li><a href="#contact"><span lang="th">ติดต่อ</span><span lang="en">Contact</span></a></li>
-                <li><button id="lang-toggle" class="lang-btn">EN</button></li>
-            </ul>
+           <ul class="nav-links">
+    <li><a href="#stats"><span lang="th">ข้อมูลตลาด</span><span lang="en">Market Data</span></a></li>
+    <li><a href="#benefits"><span lang="th">สิ่งที่คุณจะได้</span><span lang="en">Benefits</span></a></li>
+    <li><a href="#services"><span lang="th">บริการ</span><span lang="en">Services</span></a></li>
+    <li><a href="#about"><span lang="th">ผู้เชี่ยวชาญ</span><span lang="en">Expert</span></a></li>
+    <li><a href="#faq"><span lang="th">คำถามที่พบบ่อย</span><span lang="en">FAQ</span></a></li>
+    <li><a href="#contact"><span lang="th">ติดต่อ</span><span lang="en">Contact</span></a></li>
+    <li><button id="lang-toggle" class="lang-btn">EN</button></li>
+</ul>
         </nav>
     </header>
 
@@ -536,13 +537,16 @@
                     </p>
                 </div>
 
-                <div class="faq-item" style="margin-bottom: 20px;">
-                    <h4 style="font-size: 1rem; font-weight: bold; margin-bottom: 5px;">Q: <span lang="th">มีแพ็กเกจราคาตายตัวหรือไม่?</span><span lang="en">Are there fixed price packages?</span></h4>
+              <div class="faq-item" style="margin-bottom: 20px;">
+                    <h4 style="font-size: 1rem; font-weight: bold; margin-bottom: 5px;">
+                        Q: <span lang="th">มีการรับประกันยอดขายหรือไม่?</span>
+                            <span lang="en">Is sales guaranteed?</span>
+                </h4>
                     <p style="color: #555; font-size: 0.95rem;">
-                        <span lang="th">ไม่มีแพ็กเกจสำเร็จรูปครับ เนื่องจากแต่ละธุรกิจมีบริบทและความเสี่ยงต่างกัน งานจะถูกออกแบบเป็นรายกรณี</span>
-                        <span lang="en">No fixed packages. Every business has different contexts and risks, so solutions are tailored case-by-case.</span>
-                    </p>
-                </div>
+                            <span lang="th">ไม่มีการรับประกันยอดขายครับ แต่เป้าหมายคือช่วยลดความเสี่ยง และเพิ่มโอกาสให้ธุรกิจเติบโตอย่างเหมาะสม</span>
+                            <span lang="en">No sales guarantee. The goal is to minimize risk and maximize opportunities for appropriate growth.</span>
+    </p>
+</div>
 
                 <div class="faq-item" style="margin-bottom: 20px;">
                     <h4 style="font-size: 1rem; font-weight: bold; margin-bottom: 5px;">Q: <span lang="th">ขั้นตอนเริ่มต้นคืออะไร?</span><span lang="en">What is the first step?</span></h4>
