--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             </h2>
             <div class="services-grid">
                 <div class="process-step text-center">
-                    <div class="number-badge">1</div>
+                    <div class="number-badge"></div>
                     <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
                         <img src="images/call.jpg" alt="Discovery Call" style="max-height: 100%; width: auto; border-radius: 8px;">
                     </div>
@@ -428,7 +428,7 @@
                 </div>
 
                 <div class="process-step text-center">
-                    <div class="number-badge">2</div>
+                    <div class="number-badge"></div>
                     <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
                         <img src="images/analysis.jpg" alt="Deep Dive Audit" style="max-height: 100%; width: auto; border-radius: 8px;">
                     </div>
@@ -439,7 +439,7 @@
                 </div>
 
                 <div class="process-step text-center">
-                    <div class="number-badge">3</div>
+                    <div class="number-badge"></div>
                     <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
                         <img src="images/blueprint.jpg" alt="Strategy Blueprint" style="max-height: 100%; width: auto; border-radius: 8px;">
                     </div>
@@ -450,7 +450,7 @@
                 </div>
 
                 <div class="process-step text-center">
-                    <div class="number-badge">4</div>
+                    <div class="number-badge"></div>
                     <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
                         <img src="images/rocket.jpg" alt="Execution" style="max-height: 100%; width: auto; border-radius: 8px;">
                     </div>
@@ -461,7 +461,7 @@
                 </div>
 
                 <div class="process-step text-center">
-                    <div class="number-badge">5</div>
+                    <div class="number-badge"></div>
                     <div style="height: 100px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center;">
                         <img src="images/optimize.jpg" alt="Optimization" style="max-height: 100%; width: auto; border-radius: 8px;">
                     </div>
