--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                      style="height: 75px; width: auto; object-fit: contain;">
             </a>
 
-            <div class="menu-toggle" id="mobile-menu">
+            <div class="menu-toggle" id="menu-toggle">
                 <i class="fas fa-bars"></i>
             </div>
 
