--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         .hero-bg-placeholder {
             background-color: #0f2c59;
-            background-image: linear-gradient(rgba(15, 44, 89, 0.9), rgba(15, 44, 89, 0.7)), url('images/hero.jpg');
+            background-image: linear-gradient(rgba(15, 44, 89, 0.9), rgba(15, 44, 89, 0.7)), url('images/hero.png');
             background-size: cover;
             background-position: center;
         }
