--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
     </footer>
     
 // Form submission logic
+    <script>
         form.addEventListener('submit', e => {
             e.preventDefault();
             btn.disabled = true;
