--- a/index.html
+++ b/index.html
@@ -631,14 +631,14 @@
                 <div class="about-wrapper">
                     <div style="flex: 1;">
                         <h2 style="color: white; margin-bottom: 20px;">
-                            <span lang="th">เช็กความพร้อมก่อนทักแชท</span>
-                            <span lang="en">Are You Ready?</span>
+                            <span lang="th">ธุรกิจแบบไหนที่เหมาะกับบริการนี้</span>
+                            <span lang="en"Who is this for?</span>
                         </h2>
                         <p lang="th" style="margin-bottom: 30px; color: #dac0a3;">
-                            เพื่อประสิทธิภาพสูงสุด บริการนี้เหมาะกับผู้ที่มีความพร้อมดังนี้:
+                            เพื่อให้การลงทุนของคุณคุ้มค่าที่สุด บริการนี้จะตอบโจทย์ธุรกิจที่มี...
                         </p>
                         <p lang="en" style="margin-bottom: 30px; color: #dac0a3;">
-                            For maximum efficiency, this service is for those with the following readiness:
+                            To ensure you get the most value from your investment, this service is best suited for...
                         </p>
                         
                         <div class="checklist-item">
@@ -747,7 +747,6 @@
         <p>&copy; 2026 Thai Lao E-Biz Advisor. All Rights Reserved.</p>
     </footer>
     
-// Form submission logic
     <script>
         form.addEventListener('submit', e => {
             e.preventDefault();
