--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                                 <i class="fab fa-line" style="color: #00C300; width: 25px;"></i> kwan.pawach
                             </p>
                             <p style="margin-top: -8px; margin-left: 30px;">
-                                <a href="https://line.me/ti/p/MNMKXScWsr" target="_blank" style="color: #00C300; text-decoration: underline; font-weight: bold; font-size: 0.95rem;">
+                               <a href="https://lin.ee/78KhtnM"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
                                     <span lang="th">คลิกที่นี่เพื่อเพิ่ม LINE</span>
                                     <span lang="en">Click here to add LINE</span>
                                 </a>
