--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                         <div style="font-size: 1.1rem; line-height: 2;">
                             <p><i class="fab fa-facebook" style="color: #1877F2; width: 25px;"></i> Thai Lao E-Biz Advisor</p>
                             <p style="margin-bottom: 0;">
-                                <i class="fab fa-line" style="color: #00C300; width: 25px;"></i> kwan.pawach
+                                <i class="fab fa-line" style="color: #00C300; width: 25px;"></i> 
                             </p>
                             <p style="margin-top: -8px; margin-left: 30px;">
                                <a href="https://lin.ee/78KhtnM"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
