--- a/audit.html
+++ b/audit.html
@@ -228,7 +228,7 @@
                     <a href="#pricing" class="btn btn-gold">ตรวจสอบรายละเอียดบริการ <i class="fas fa-arrow-down" style="margin-left: 10px;"></i></a>
                 </div>
                 <div class="hero-image">
-                    <img src="https://placehold.co/600x400/0f2c59/ffffff?text=Page+Readiness+Check" alt="Page Audit Preparation">
+                    <img src="images/pageaudit.jpg" alt="Page Audit Preparation">
                 </div>
             </div>
         </div>
