--- a/audit.html
+++ b/audit.html
@@ -571,8 +571,8 @@
 
             <div class="contact-form-container" style="margin-top: 30px;">
                 <form id="google-sheet-form" class="contact-form">
-                    <h3 lang="th" style="color: #0f2c59; margin-bottom: 20px;">ฝากข้อความ (Fast Track)</h3>
-                    <h3 lang="en" style="color: #0f2c59; margin-bottom: 20px;">Request a Callback</h3>
+                    <h3 lang="th" style="color: #0f2c59; margin-bottom: 20px;">สนใจให้เราช่วยตรวจเพจ? ฝากข้อมูลที่นี่</h3>
+                    <h3 lang="en" style="color: #0f2c59; margin-bottom: 20px;">Interested in a Page Audit? Let Us Know Here</h3>
                     
                     <div style="margin-bottom: 15px;">
                         <input type="text" name="name" placeholder="ชื่อของคุณ / Name" required>
@@ -584,7 +584,7 @@
                         <input type="text" name="product" placeholder="สินค้าของคุณคืออะไร? / Your Product" required>
                     </div>
                     <div style="margin-bottom: 20px;">
-                        <textarea name="message" rows="4" placeholder="ปัญหาหลักที่ต้องการปรึกษา / Key Problem" required></textarea>
+                        <textarea name="Page Link" rows="4" placeholder="ลิงค์เพจของคุณ" required></textarea>
                     </div>
                     
                     <button type="submit" id="submit-btn" class="btn btn-gold" style="width: 100%; border: none; cursor: pointer;">
