--- a/audit.html
+++ b/audit.html
@@ -584,7 +584,7 @@
                         <input type="text" name="product" placeholder="สินค้าของคุณคืออะไร? / Your Product" required>
                     </div>
                     <div style="margin-bottom: 20px;">
-                        <textarea name="Page Link" rows="4" placeholder="ลิงค์เพจของคุณ" required></textarea>
+                        <textarea name="message" rows="4" placeholder="ลิงค์เพจของคุณ / Your Page Link" required></textarea>
                     </div>
                     
                     <button type="submit" id="submit-btn" class="btn btn-gold" style="width: 100%; border: none; cursor: pointer;">
