--- a/audit.html
+++ b/audit.html
@@ -566,13 +566,13 @@
             <h2 lang="th">เริ่มต้นอย่างมั่นใจในตลาดลาว</h2>
             <h2 lang="en">Start Confidently in the Lao Market</h2>
             
-            <p lang="th">ให้เราเป็นส่วนหนึ่งในการเตรียมความพร้อมเพื่อความสำเร็จของธุรกิจคุณ</p>
-            <p lang="en">Let us be part of your preparation for business success.</p>
+            <p lang="th">สนใจให้เราช่วยตรวจเพจ? ฝากข้อมูลที่นี่</p>
+            <p lang="en">Interested in a Page Audit? Let Us Know Here.</p>
 
             <div class="contact-form-container" style="margin-top: 30px;">
                 <form id="google-sheet-form" class="contact-form">
-                    <h3 lang="th" style="color: #0f2c59; margin-bottom: 20px;">สนใจให้เราช่วยตรวจเพจ? ฝากข้อมูลที่นี่</h3>
-                    <h3 lang="en" style="color: #0f2c59; margin-bottom: 20px;">Interested in a Page Audit? Let Us Know Here</h3>
+                    <h3 lang="th" style="color: #0f2c59; margin-bottom: 20px;">ฝากข้อมูลที่นี่ ยังไม่เสียค่าใช้จ่าย</h3>
+                    <h3 lang="en" style="color: #0f2c59; margin-bottom: 20px;">Submit your details here. No charges apply at this stage </h3>
                     
                     <div style="margin-bottom: 15px;">
                         <input type="text" name="name" placeholder="ชื่อของคุณ / Name" required>
