--- a/index.html
+++ b/index.html
@@ -779,8 +779,8 @@
                 
                 <div style="flex: 1; min-width: 300px; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
                     <form id="google-sheet-form" class="contact-form">
-                        <h3 lang="th" style="margin-bottom: 20px; color: #0f2c59;">ฝากข้อความ (Fast Track)</h3>
-                        <h3 lang="en" style="margin-bottom: 20px; color: #0f2c59;">Request a Callback</h3>
+                        <h3 lang="th" style="margin-bottom: 20px; color: #0f2c59;">ฝากข้อมูลไว้ที่นี่ ขั้นตอนนี้ยังไม่เสียค่าใช้จ่าย</h3>
+                        <h3 lang="en" style="margin-bottom: 20px; color: #0f2c59;">Submit your details here. No charges apply at this stage.</h3>
                         <div style="margin-bottom: 15px;">
                             <input type="text" name="name" placeholder="ชื่อของคุณ / Name" required 
                                    style="width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 8px;">
