--- a/audit.html
+++ b/audit.html
@@ -571,7 +571,7 @@
 
             <div class="contact-form-container" style="margin-top: 30px;">
                 <form id="google-sheet-form" class="contact-form">
-                    <h3 lang="th" style="color: #0f2c59; margin-bottom: 20px;">ฝากข้อมูลที่นี่ ยังไม่เสียค่าใช้จ่าย</h3>
+                    <h3 lang="th" style="color: #0f2c59; margin-bottom: 20px;">ฝากข้อมูลไว้ที่นี่ ขั้นตอนนี้ยังไม่เสียค่าใช้จ่าย</h3>
                     <h3 lang="en" style="color: #0f2c59; margin-bottom: 20px;">Submit your details here. No charges apply at this stage </h3>
                     
                     <div style="margin-bottom: 15px;">
