--- a/audit.html
+++ b/audit.html
@@ -563,10 +563,10 @@
 
     <section class="final-cta">
         <div class="container">
-            <h2 lang="th">เริ่มต้นอย่างมั่นใจในตลาดลาว</h2>
+            <h2 lang="th">สนใจให้เราช่วยตรวจเพจ? ฝากข้อมูลที่นี่</h2>
             <h2 lang="en">Start Confidently in the Lao Market</h2>
             
-            <p lang="th">สนใจให้เราช่วยตรวจเพจ? ฝากข้อมูลที่นี่</p>
+            <p lang="th">เริ่มต้นอย่างมั่นใจในตลาดลาว</p>
             <p lang="en">Interested in a Page Audit? Let Us Know Here.</p>
 
             <div class="contact-form-container" style="margin-top: 30px;">
