--- a/audit.html
+++ b/audit.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+    <link rel="icon" type="image/png" href="images/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>บริการตรวจความพร้อมเพจ (Page Audit) ก่อนทำตลาดลาว | Thai Lao E-Biz Advisor</title>
