--- a/index.html
+++ b/index.html
@@ -799,8 +799,18 @@
         </div>
     </section>
 
-    <footer style="padding: 40px 0; background: #0a1f3d; color: white; text-align: center;">
-        <p>&copy; 2026 Thai Lao E-Biz Advisor. All Rights Reserved.</p>
+    <p style="margin-top: 30px; font-size: 0.9rem; opacity: 0.7;">
+                <span lang="th">โดย <strong>Thai Lao E-Biz Advisor</strong><br>เพื่อนคู่คิดธุรกิจไทย-ลาว ด้วยประสบการณ์กว่า 10 ปี</span>
+                <span lang="en">By <strong>Thai Lao E-Biz Advisor</strong><br>Your Thai-Lao Business Partner with 10+ Years Experience</span>
+            </p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2026 Thai Lao E-Biz Advisor. All Rights Reserved.</p>
+            <p><a href="http://www.thailaobiz.com" style="color: #d4a373;">www.thailaobiz.com</a></p>
+        </div>
     </footer>
     
     <script>
