--- a/index.html
+++ b/index.html
@@ -807,10 +807,16 @@
         </div>
     </section>
 
-   <footer>
+  <footer style="background-color: #0a1f3d; padding: 40px 0; text-align: center; border-top: none;">
         <div class="container">
-            <p>&copy; 2026 Thai Lao E-Biz Advisor. All Rights Reserved.</p>
-            <p><a href="http://www.thailaobiz.com" style="color: #d4a373;">www.thailaobiz.com</a></p>
+            <p style="color: #6c757d; font-size: 0.85rem; margin-bottom: 10px;">
+                &copy; 2026 Thai Lao E-Biz Advisor. All Rights Reserved.
+            </p>
+            <p>
+                <a href="http://www.thailaobiz.com" style="color: #d4a373; text-decoration: none; font-weight: 500; font-size: 0.9rem;">
+                    www.thailaobiz.com
+                </a>
+            </p>
         </div>
     </footer>
     
