--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                             </p>
                         
                              <a href="mailto:kwanpawach@gmail.com" style="text-decoration: none; color: inherit;">
-                                    <i class="fas fa-envelope" style="color: #c0392b; width: 25px;"></i> kwanpawach@gmail.com
+                                    <i class="fas fa-envelope" style="color: #c0392b; width: 25px;"></i> thailaobiz@gmail.com
                                 </a>
                        
                            <div style="font-size: 1.1rem; line-height: 2;">
